# capnp-zig

./: .actrc  .dockerignore  .gitignore  .gitmodules  .mise.toml  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  HANDOFF_CONTEXT.md  Justfile  PLAN.md  PROGRESS_REPORT.md  QUALITY_REPORT.md  README.md  ROADMAP.md  build.zig  build.zig.zon
bench/: alloc_counter.zig  baselines.json  packed_unpacked.zig  ping_pong.zig
docs/: api_contracts.md  architecture.md  build-integration.md  capnp-deno_requests.md  full-spectrum-audit-guide.md  gaps.md  getting-started-rpc.md  getting-started-serialization.md  interop_e2e_merge_plan.md  large_schema_dedup_assessment.md  production_parity_checklist.md  quality_report_followups_checklist.md  rpc-capnp-integration-plan.md  rpc-layering-sweep.md  rpc_peer_from_peer_zig_triage.md  rpc_runtime_design.md  stability.md  wasm_host_abi.md  zig_package_publication.md
examples/: pingpong.capnp  pingpong.zig  rpc_pingpong.zig
src/: lib.zig  lib_core.zig  main.zig  message.zig  reader.zig  request_reader.zig  schema.zig  schema_validation.zig
tests/: capnp_test_vendor_test.zig  capnp_testdata_test.zig  codegen_annotations_test.zig  codegen_defaults_test.zig  codegen_generated_runtime_test.zig  codegen_golden_test.zig  codegen_rpc_nested_test.zig  codegen_streaming_test.zig  codegen_test.zig  codegen_union_group_test.zig  interop_rpc_test.zig  message_test.zig  rpc_cap_table_encode_test.zig  rpc_framing_test.zig  rpc_host_peer_test.zig  rpc_peer_cleanup_test.zig  rpc_peer_control_from_peer_control_zig_test.zig  rpc_peer_from_peer_zig_test.zig  rpc_peer_return_send_helpers_test.zig  rpc_peer_test.zig  rpc_peer_transport_callbacks_test.zig  rpc_peer_transport_state_test.zig  rpc_promised_answer_transform_test.zig  schema_validation_test.zig  (+3 more)
tests/e2e/cpp/: CMakeLists.txt  Dockerfile  Justfile  main_client.cpp  main_server.cpp
tests/e2e/rust/: Cargo.toml  Dockerfile  Justfile  build.rs
tests/e2e/rust/src/: client.rs  main.rs  server.rs
(+221 files in other folders)
